--- a/index.html
+++ b/index.html
@@ -1,19 +1,75 @@
-<html>
-<HEAD><title>Todo App</title>
-<link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="style.css" type="text/css" MEDIA="screen" charset="utf-8">
-</HEAD>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet'>
+  <link rel="stylesheet" href="style.css">
+  <title>Todo App</title>
+</head>
+
 <body>
-<div class="aaa"><img src="./eisenhower-matrix.jpg"><a class='more_inf' href="https://goal-life.com/page/method/matrix-eisenhower">Want more details&quest;</a></div>
-<div class="centered-main-page-element"><p id='topSectionForAddingElementToList'><label for="new-task">Add Item</label><div class="task-row-wrapper"><input id='new-task'class="task" type="text"><button>Add</button></div>
-</p><h3>Todo</h3>
-<ul id='incompleteTasks'>
-<li><input type='checkbox'><label class="task">Pay Bills</label><input type="text" class="task"><button class="edit">Edit</button><button class="delete"><img src="./remove.svg"></button></li>
-<li class="editMode"><input type="checkbox"><label class="task">Go Shopping</label><input type="text" value="Go Shopping" class="task"><button class='edit'>Save</button><button class="delete"><img src="./remove.svg"></button></li>
-</ul><h3>Completed</h3><ul id="completed-tasks"><li><input type="checkbox" checked><label class="task">See the Doctor</label><input type="text" class="task"><button class="edit">Edit</button><button class="delete"><img src="./remove.svg"></button>
-</li>
-</ul>
-</div>
-<script type="text/javascript" SRC="app.js"></script>
+  <header class="header">
+    <div class="image-block">
+      <img class="image-block__img" src="./eisenhower-matrix.jpg" alt="Matrix image">
+      <a class='image-block__link' href="https://goal-life.com/page/method/matrix-eisenhower" target="_blank">Want
+        more
+        details?</a>
+    </div>
+  </header>
+  <main class="main">
+    <section class="section">
+      <div class="todo-app">
+        <div class="todo-app__added">
+          <h3 class="todo-title todo-add">Add Item</h3>
+          <div class="todo-row-wrapper">
+            <input class="todo-row-wrapper__input task" id='new-task' type="text">
+            <button class="todo-row-wrapper__btn">Add</button>
+          </div>
+        </div>
+        <div class="todo-app__checked">
+          <h3 class="todo-title">Todo</h3>
+          <ul class="incomplete-list" id='incompleteTasks'>
+            <li class="incomplete-list__item">
+              <input class="incomplete-list__checkbox" type='checkbox'>
+              <label class="incomplete-list__label task">Pay Bills</label>
+              <input class="incomplete-list__input task" type="text">
+              <button class="incomplete-list__btn edit">Edit</button>
+              <button class="incomplete-list__btn delete">
+                <img class="incomplete-list__img" src="./remove.svg" alt="Remove image">
+              </button>
+            </li>
+            <li class="incomplete-list__item editMode">
+              <input class="incomplete-list__checkbox" type="checkbox">
+              <label class="incomplete-list__label task">Go Shopping</label>
+              <input class="incomplete-list__input task" type="text" value="Go Shopping">
+              <button class='edit'>Save</button>
+              <button class="incomplete-list__btn delete">
+                <img class="incomplete-list__img" src="./remove.svg" alt="Remove image">
+              </button>
+            </li>
+          </ul>
+        </div>
+        <div class="todo-app__done">
+          <h3 class="todo-title">Completed</h3>
+          <ul class="completed-list" id="completed-tasks">
+            <li class="completed-list__item">
+              <input class="completed-list__checkbox" type="checkbox" checked>
+              <label class="completed-list__label task">See the Doctor</label>
+              <input class="completed-list__input" type="text" class="task">
+              <button class="completed-list__btn edit">Edit</button>
+              <button class="completed-list delete">
+                <img class="completed-list__img" src="./remove.svg" alt="Remove image">
+              </button>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+  </main>
+  <script src="app.js"></script>
 </body>
+
 </html>
