refactor: renamed variables and functions in app.js file

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header class="header">
     <div class="image-block">
       <img class="image-block__img" src="./eisenhower-matrix.jpg" alt="Matrix image">
-      <a class='image-block__link' href="https://goal-life.com/page/method/matrix-eisenhower" target="_blank">Want
+      <a class="image-block__link" href="https://goal-life.com/page/method/matrix-eisenhower" target="_blank">Want
         more
         details?</a>
     </div>
@@ -25,15 +25,15 @@
         <div class="todo-app__added">
           <h3 class="todo-title todo-add">Add Item</h3>
           <div class="todo-row-wrapper">
-            <input class="todo-row-wrapper__input task" id='new-task' type="text">
-            <button class="todo-row-wrapper__btn">Add</button>
+            <input class="todo-row-wrapper__input task" id='add-new-task' type="text">
+            <button class="todo-row-wrapper__btn button-added">Add</button>
           </div>
         </div>
         <div class="todo-app__checked">
           <h3 class="todo-title">Todo</h3>
-          <ul class="incomplete-list" id='incompleteTasks'>
+          <ul class="incomplete-list" id="incomplete-tasks">
             <li class="incomplete-list__item">
-              <input class="incomplete-list__checkbox" type='checkbox'>
+              <input class="incomplete-list__checkbox" type="checkbox">
               <label class="incomplete-list__label task">Pay Bills</label>
               <input class="incomplete-list__input task" type="text">
               <button class="incomplete-list__btn edit">Edit</button>
@@ -41,11 +41,11 @@
                 <img class="incomplete-list__img" src="./remove.svg" alt="Remove image">
               </button>
             </li>
-            <li class="incomplete-list__item editMode">
+            <li class="incomplete-list__item edit-mode">
               <input class="incomplete-list__checkbox" type="checkbox">
               <label class="incomplete-list__label task">Go Shopping</label>
               <input class="incomplete-list__input task" type="text" value="Go Shopping">
-              <button class='edit'>Save</button>
+              <button class="edit">Save</button>
               <button class="incomplete-list__btn delete">
                 <img class="incomplete-list__img" src="./remove.svg" alt="Remove image">
               </button>
